Refactored and reorganized.

--- a/ua/server/server/Makefile.in
+++ b/ua/server/server/Makefile.in
@@ -255,6 +255,7 @@ SUBDIRS = \
   builtin_server \
   endpoint_services \
   services_registry \
+  standard_namespace \
   tcp_server \
   xml_address_space_loader
 
