--- a/ua/server/server/binary_protocol/Makefile.am
+++ b/ua/server/server/binary_protocol/Makefile.am
@@ -18,17 +18,23 @@ configdir = $(sysconfdir)/opcua
 INCLUDES= \
   -Iinclude \
   -I$(top_srcdir)/common/include \
+  -I$(top_srcdir)/server/address_space/include \
   -I$(top_srcdir)/server/endpoint_services/include \
   -I$(top_srcdir)/server/services_registry/include \
   -I$(top_srcdir)/server/tcp_server/include \
   $(URI_INCLUDES) $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
 
-TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) -Itests
+TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) \
+  -Itests \
+  -I$(top_srcdir)/client/include \
+  -I$(top_srcdir)/server/builtin_server/include
 
 lib_LTLIBRARIES = libopcua_protocol.la
 addonsinclude_HEADERS = include/opc/ua/server/addons/opcua_protocol.h
 libopcua_protocol_la_SOURCES = \
  src/opcua_protocol_addon.cpp \
+ src/opcua_protocol_addon.h \
+ src/opcua_protocol_module.cpp \
  src/opc_tcp_processor.cpp \
  src/opc_tcp_processor.h
 libopcua_protocol_la_CPPFLAGS = $(INCLUDES)
@@ -39,9 +45,29 @@ TESTS = test_opcua_protocol_addon
 check_PROGRAMS = $(TESTS)
 
 test_opcua_protocol_addon_SOURCES = \
-  src/server/server_options.cpp \
-  tests/server/opcua_protocol_addon_test.cpp \
-  tests/server/common.cpp
+  src/opcua_protocol_addon.cpp \
+  src/opcua_protocol_addon.h \
+  src/opcua_protocol_module.cpp \
+  src/opc_tcp_processor.cpp \
+  src/opc_tcp_processor.h \
+  tests/opcua_protocol_addon_test.cpp \
+  ../address_space/src/address_space_addon.cpp \
+  ../address_space/src/address_space_internal.cpp \
+  ../address_space/src/address_space_internal.h \
+  ../builtin_server/src/builtin_server_factory.cpp \
+  ../builtin_server/src/builtin_server_impl.cpp \
+  ../builtin_server/src/builtin_server_impl.h \
+  ../endpoint_services/src/endpoints_services_addon.cpp \
+  ../endpoint_services/src/endpoints_services_addon.h \
+  ../endpoint_services/src/endpoints_services_factory.h \
+  ../services_registry/src/services_registry_factory.cpp \
+  ../services_registry/src/services_registry_factory.h \
+  ../services_registry/src/services_registry_impl.cpp \
+  ../services_registry/src/services_registry_impl.h \
+  ../standard_namespace/src/standard_namespace_addon.cpp \
+  ../standard_namespace/src/standard_namespace.cpp
+
+test_opcua_protocol_addon_LDADD = $(top_builddir)/client/libopcua_client.a
 test_opcua_protocol_addon_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
 test_opcua_protocol_addon_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
 
