--- a/ua/server/server/exe/tests/configs/test_addon.config
+++ b/ua/server/server/exe/tests/configs/test_addon.config
@@ -4,7 +4,7 @@
 
     <module>
       <id>TestAddonID</id>
-      <path>./test_addon.so</path>
+      <path>test_addon.so</path>
       <parameters>
         <hello>world</hello>
       </parameters>
