Updated server.config for successfull starting of server.

--- a/ua/server/server/exe/configs/server.config
+++ b/ua/server/server/exe/configs/server.config
@@ -3,20 +3,20 @@
   <modules>
 
     <module>
-      <id>tcp_server</id>
-      <path>libopcua_tcp_server.so</path>
+      <id>services_registry</id>
+      <path>libservices_registry_addon.so</path>
     </module>
 
     <module>
-      <id>internal_computer</id>
-      <path>libinternal_computer_addon.so</path>
+      <id>tcp_server</id>
+      <path>libopcua_tcp_server.so</path>
     </module>
 
     <module>
       <id>endpoints_services</id>
       <path>libendpoints_services_addon.so</path>
       <depends_on>
-        <id>internal_computer</id>
+        <id>services_registry</id>
       </depends_on>
     </module>
 
@@ -24,7 +24,7 @@
       <id>address_space_registry</id>
       <path>libaddress_space_addon.so</path>
       <depends_on>
-        <id>internal_computer</id>
+        <id>services_registry</id>
       </depends_on>
     </module>
 
@@ -41,7 +41,7 @@
       <path>libopcua_protocol.so</path>
       <depends_on>
         <id>tcp_server</id>
-        <id>internal_computer</id>
+        <id>services_registry</id>
         <id>endpoints_services</id>
       </depends_on>
       <parameters>
